Get and PUT company
